# cree

./: .dockerignore  .env.example  .gitignore  CREE_STATUS.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  JUDGE_PITCH.md  README.md  REQUIREMENTS_CHECKLIST.md  STATUS.md  docker-compose.yml  inference.py  models.py  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt  test_mvp.py
.github/workflows/: backend-checks.yml
env/: environment.py
frontend/: Dockerfile  FRONTEND_README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ActionButtons.tsx  Dashboard.tsx  Dither.css  Dither.tsx  HistoryLog.tsx  IncidentForm.tsx  MetricsDisplay.tsx
scripts/: preflight.py
server/: api_models.py  app.py  incidents.py  runtime.py  sessions.py  ws_handler.py
server/routers/: __init__.py  core.py  incidents.py  projects.py
tasks/: graders.py
tests/: conftest.py  test_api_contracts.py  test_environment_rules.py  test_graders.py
